syntax = "proto3";

message LoginRequest
{
	bytes credentials = 1;
}

message LoginResponse
{
	enum Status
	{
	  OK = 0;
	  FAIL = -1;
	}
	Status status = 1;
	repeated NewConversation conversations = 2;
}

message NewConversation
{
	fixed32 id = 1;
	string name = 2;
}