syntax = "proto3";

message SendMessageRequest
{
	bytes recipient_id = 1;
	bytes data = 2;
}

message SendMessageResponse 
{
	enum Status {
	  OK = 0;
	  FAIL = 1;
	}
	Status status = 1;	
}

message Message 
{
	bytes sender_id = 1;
	bytes data = 2;
}


